--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 PORT=5000
 
 # Configuración de Base de Datos MySQL
-DB_HOST=localhost
-DB_USER=comfachoco_user
+DB_HOST=http://srv1769.hstgr.io/
+DB_USER=71c~>DT5+:R
 DB_PASSWORD=comfachoco2025
-DB_NAME=comfachoco_portal
+DB_NAME=u307136452_comfachoco
 # JWT Secret (cámbialo por una clave segura)
 
 
